--- a/research/02_data_validation.ipynb
+++ b/research/02_data_validation.ipynb
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "58937bba",
    "metadata": {},
    "outputs": [],
@@ -437,6 +437,72 @@
     "    unzip_data_dir: Path\n",
     "    all_schema: dict"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "62638b0e",
+   "metadata": {},
+   "source": [
+    "## src/Mushroom_classifier/config/configuration.py\n",
+    "\n",
+    "Configuration Manager Class\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "0560c80e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.Mushroom_classifier.constants import *\n",
+    "from src.Mushroom_classifier.utils.common import read_yaml, create_directories\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "1906caee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ConfigurationManager:\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        config_filepath = CONFIG_FILE_PATH,\n",
+    "        params_filepath = PARAMS_FILE_PATH,\n",
+    "        schema_filepath = SCHEMA_FILE_PATH):\n",
+    "\n",
+    "        self.config = read_yaml(config_filepath)\n",
+    "        self.params = read_yaml(params_filepath)\n",
+    "        self.schema = read_yaml(schema_filepath)\n",
+    "\n",
+    "        create_directories([self.config.artifacts_root])\n",
+    "\n",
+    "    \n",
+    "    def get_data_validation_config(self) -> DataValidationConfig:\n",
+    "        config = self.config.data_validation\n",
+    "        schema = self.schema.COLUMNS\n",
+    "\n",
+    "        create_directories([config.root_dir])\n",
+    "\n",
+    "        data_validation_config = DataValidationConfig(\n",
+    "            root_dir = config.root_dir,\n",
+    "            STATUS_FILE = config.STATUS_FILE,\n",
+    "            unzip_data_dir = config.unzip_data_dir,\n",
+    "            all_schema = schema,\n",
+    "        )\n",
+    "\n",
+    "        return data_validation_config"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6ffc18fc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
