--- a/research/02_data_validation.ipynb
+++ b/research/02_data_validation.ipynb
@@ -497,12 +497,69 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f35064af",
+   "metadata": {},
+   "source": [
+    "## Components for Data Validation"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "6ffc18fc",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import os \n",
+    "from src.Mushroom_classifier import logger\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3c9820c4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class DataValidation:\n",
+    "    def __init__(self, config: DataValidationConfig):\n",
+    "        self.config = config\n",
+    "\n",
+    "    \n",
+    "    def validate_all_columns(self) -> bool:\n",
+    "        try:\n",
+    "            validation_status = None\n",
+    "\n",
+    "            data = pd.read_csv(self.config.unzip_data_dir)\n",
+    "            all_cols = list(data.columns)\n",
+    "\n",
+    "            all_schema = self.config.all_schema.keys()\n",
+    "\n",
+    "            for col in all_cols:\n",
+    "                if col not in all_schema:\n",
+    "                    validation_status = False\n",
+    "                    with open(self.config.STATUS_FILE, 'w') as f:\n",
+    "                        f.write(f\"Validation status: {validation_status}\")\n",
+    "                else:\n",
+    "                    validation_status = True\n",
+    "                    with open(self.config.STATUS_FILE, 'w') as f:\n",
+    "                        f.write(f\"Validation status: {validation_status}\")\n",
+    "\n",
+    "            \n",
+    "            # Dropping null values column and unuseful columns\n",
+    "            logger.info(\"droping nulll values column and unuseful columns\")\n",
+    "            data.drop(columns=['veil-type', 'stalk-root'], axis=1, inplace=True)\n",
+    "            data.to_csv(self.config.root_dir+\"/mushrooms.csv\", index=False)\n",
+    "\n",
+    "\n",
+    "            return validation_status\n",
+    "        \n",
+    "\n",
+    "        except Exception as e:\n",
+    "            raise e"
+   ]
   }
  ],
  "metadata": {
