Updata pipeline for validation.

--- a/research/02_data_validation.ipynb
+++ b/research/02_data_validation.ipynb
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "3c9820c4",
    "metadata": {},
    "outputs": [],
@@ -560,6 +560,51 @@
     "        except Exception as e:\n",
     "            raise e"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d9439ff",
+   "metadata": {},
+   "source": [
+    "## Data Validation Pipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "8abf50e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2025-08-12 01:53:47,285: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2025-08-12 01:53:47,310: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2025-08-12 01:53:47,319: INFO: common: yaml file: schema.yaml loaded successfully]\n",
+      "[2025-08-12 01:53:47,323: INFO: common: created directory at: artifacts]\n",
+      "[2025-08-12 01:53:47,325: INFO: common: created directory at: artifacts/data_validation]\n",
+      "[2025-08-12 01:53:47,390: INFO: 3106413495: droping nulll values column and unuseful columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    config = ConfigurationManager()\n",
+    "    data_validation_config = config.get_data_validation_config()\n",
+    "    data_validation = DataValidation(config = data_validation_config)\n",
+    "    data_validation.validate_all_columns()\n",
+    "except Exception as e:\n",
+    "    raise e\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f64f4760",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
