update src configuration manager.

--- a/research/03_data_transformation.ipynb
+++ b/research/03_data_transformation.ipynb
@@ -95,9 +95,65 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "48a489e5",
+   "metadata": {},
+   "source": [
+    "## src/mlProject/config/configuration.py\n",
+    "\n",
+    "Configuration Manager Class\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "e06aa615",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.Mushroom_classifier.constants import *\n",
+    "from src.Mushroom_classifier.utils.common import read_yaml, create_directories"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "b781ee47",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ConfigurationManager:\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        config_filepath = CONFIG_FILE_PATH,\n",
+    "        params_filepath = PARAMS_FILE_PATH,\n",
+    "        schema_filepath = SCHEMA_FILE_PATH):\n",
+    "\n",
+    "        self.config = read_yaml(config_filepath)\n",
+    "        self.params = read_yaml(params_filepath)\n",
+    "        self.schema = read_yaml(schema_filepath)\n",
+    "\n",
+    "        create_directories([self.config.artifacts_root])\n",
+    "\n",
+    "\n",
+    "    def get_data_transformation_config(self) -> DataTransformationConfig:\n",
+    "        config = self.config.data_transformation\n",
+    "\n",
+    "        create_directories([config.root_dir])\n",
+    "\n",
+    "        data_transformation_config = DataTransformationConfig(\n",
+    "            root_dir = config.root_dir,\n",
+    "            data_path = config.data_path,\n",
+    "        )\n",
+    "\n",
+    "        return data_transformation_config\n",
+    "    "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e06aa615",
+   "id": "40852595",
    "metadata": {},
    "outputs": [],
    "source": []
