update components for data transformation.

--- a/research/03_data_transformation.ipynb
+++ b/research/03_data_transformation.ipynb
@@ -151,9 +151,80 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "16158cc1",
+   "metadata": {},
+   "source": [
+    "## Components for Data Transformation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "40852595",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os \n",
+    "from src.Mushroom_classifier import logger\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "import pandas as pd\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "5206b787",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class DataTransformation:\n",
+    "    def __init__(self, config: DataTransformationConfig):\n",
+    "        self.config = config\n",
+    "\n",
+    "    ## Note: You can add different data transformation techniques such as Scaler, PCA and all\n",
+    "    #You can perform all kinds of EDA in ML cycle here before passing this data to the model\n",
+    "\n",
+    "    # I am only adding train_test_spliting because this data is already cleaned up.\n",
+    "\n",
+    "    def label_encoding_to_all_feature(self):\n",
+    "        data = pd.read_csv(self.config.data_path)\n",
+    "\n",
+    "        # converting all categorical columns to numerical\n",
+    "        logger.info(\"converting all categorical columns to numerical using LabelEncoder\")\n",
+    "\n",
+    "        labelencoder = LabelEncoder()\n",
+    "        for column in data.columns:\n",
+    "            data[column] = labelencoder.fit_transform(data[column])\n",
+    "        logger.info(\"Columns datatype after converting to numerical\")\n",
+    "        logger.info(f\"{data.dtypes}\")\n",
+    "        data.to_csv(os.path.join(self.config.root_dir, \"data.csv\"), index=False)\n",
+    "    \n",
+    "\n",
+    "    def train_test_splitting(self):\n",
+    "        data = pd.read_csv(self.config.root_dir+\"/data.csv\")\n",
+    "\n",
+    "        # Split the data into training and test sets. (0.80, 0.20) split.\n",
+    "        train, test = train_test_split(data, random_state = 42, test_size = .2)\n",
+    "\n",
+    "\n",
+    "        train.to_csv(os.path.join(self.config.root_dir, \"train.csv\"), index = False)\n",
+    "        test.to_csv(os.path.join(self.config.root_dir, \"test.csv\"), index = False)\n",
+    "\n",
+    "        logger.info(\"Splitted data into training and test sets\")\n",
+    "        logger.info(train.shape)\n",
+    "        logger.info(test.shape)\n",
+    "\n",
+    "        print(train.shape)\n",
+    "        print(test.shape)\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40852595",
+   "id": "9d7fe1aa",
    "metadata": {},
    "outputs": [],
    "source": []
