update pipeline for data transformation.

--- a/research/03_data_transformation.ipynb
+++ b/research/03_data_transformation.ipynb
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "5206b787",
    "metadata": {},
    "outputs": [],
@@ -202,7 +202,7 @@
     "        data.to_csv(os.path.join(self.config.root_dir, \"data.csv\"), index=False)\n",
     "    \n",
     "\n",
-    "    def train_test_splitting(self):\n",
+    "    def train_test_spliting(self):\n",
     "        data = pd.read_csv(self.config.root_dir+\"/data.csv\")\n",
     "\n",
     "        # Split the data into training and test sets. (0.80, 0.20) split.\n",
@@ -222,9 +222,76 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ef7f0dfd",
+   "metadata": {},
+   "source": [
+    "## Data Transformation Pipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "9d7fe1aa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2025-09-24 00:44:44,396: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2025-09-24 00:44:44,403: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2025-09-24 00:44:44,409: INFO: common: yaml file: schema.yaml loaded successfully]\n",
+      "[2025-09-24 00:44:44,412: INFO: common: created directory at: artifacts]\n",
+      "[2025-09-24 00:44:44,414: INFO: common: created directory at: artifacts/data_transformation]\n",
+      "[2025-09-24 00:44:44,485: INFO: 168495426: converting all categorical columns to numerical using LabelEncoder]\n",
+      "[2025-09-24 00:44:44,527: INFO: 168495426: Columns datatype after converting to numerical]\n",
+      "[2025-09-24 00:44:44,531: INFO: 168495426: class                       int32\n",
+      "cap-shape                   int32\n",
+      "cap-surface                 int32\n",
+      "cap-color                   int32\n",
+      "bruises                     int32\n",
+      "odor                        int32\n",
+      "gill-attachment             int32\n",
+      "gill-spacing                int32\n",
+      "gill-size                   int32\n",
+      "gill-color                  int32\n",
+      "stalk-shape                 int32\n",
+      "stalk-surface-above-ring    int32\n",
+      "stalk-surface-below-ring    int32\n",
+      "stalk-color-above-ring      int32\n",
+      "stalk-color-below-ring      int32\n",
+      "veil-color                  int32\n",
+      "ring-number                 int32\n",
+      "ring-type                   int32\n",
+      "spore-print-color           int32\n",
+      "population                  int32\n",
+      "habitat                     int32\n",
+      "dtype: object]\n",
+      "[2025-09-24 00:44:44,634: INFO: 168495426: Splitted data into training and test sets]\n",
+      "[2025-09-24 00:44:44,635: INFO: 168495426: (6499, 21)]\n",
+      "[2025-09-24 00:44:44,636: INFO: 168495426: (1625, 21)]\n",
+      "(6499, 21)\n",
+      "(1625, 21)\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    config = ConfigurationManager()\n",
+    "    data_transformation_config = config.get_data_transformation_config()\n",
+    "    data_transformation = DataTransformation(config = data_transformation_config)\n",
+    "    data_transformation.label_encoding_to_all_feature()\n",
+    "    data_transformation.train_test_spliting()\n",
+    "\n",
+    "except Exception as e:\n",
+    "    raise e\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d7fe1aa",
+   "id": "e3f0f5dc",
    "metadata": {},
    "outputs": [],
    "source": []
