--- a/research/04_model_trainer.ipynb
+++ b/research/04_model_trainer.ipynb
@@ -100,12 +100,65 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6ac42eb0",
+   "metadata": {},
+   "source": [
+    "## src/mlProject/config/configuration.py\n",
+    "Configuration Manager Class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "db453431",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.Mushroom_classifier.constants import *\n",
+    "from src.Mushroom_classifier.utils.common import read_yaml, create_directories"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "053e9a45",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class ConfigurationManager:\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        config_filepath = CONFIG_FILE_PATH,\n",
+    "        params_filepath = PARAMS_FILE_PATH,\n",
+    "        schema_filepath = SCHEMA_FILE_PATH):\n",
+    "\n",
+    "        self.config = read_yaml(config_filepath)\n",
+    "        self.params = read_yaml(params_filepath)\n",
+    "        self.schema = read_yaml(schema_filepath)\n",
+    "\n",
+    "        create_directories([self.config.artifacts_root])\n",
+    "\n",
+    "    \n",
+    "    def get_model_trainer_config(self) -> ModelTrainerConfig:\n",
+    "        config = self.config.model_trainer\n",
+    "        params = self.params.RandomForest\n",
+    "        schema = self.schema.TARGET_COLUMN\n",
+    "\n",
+    "        create_directories([config.root_dir])\n",
+    "\n",
+    "        model_trainer_config = ModelTrainerConfig(\n",
+    "            root_dir = config.root_dir,\n",
+    "            train_data_path = config.train_data_path,\n",
+    "            test_data_path = config.test_data_path,\n",
+    "            model_name = config.model_name,\n",
+    "            n_estimators = params.n_estimators,\n",
+    "            min_samples_split = params.min_samples_split,\n",
+    "            target_column = schema.name\n",
+    "        )\n",
+    "\n",
+    "        return model_trainer_config"
+   ]
   }
  ],
  "metadata": {
