update components for mdel trainer

--- a/research/04_model_trainer.ipynb
+++ b/research/04_model_trainer.ipynb
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "053e9a45",
    "metadata": {},
    "outputs": [],
@@ -159,6 +159,65 @@
     "\n",
     "        return model_trainer_config"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5bf95506",
+   "metadata": {},
+   "source": [
+    "## Components for Model Trainer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "43dd2760",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import pandas as pd\n",
+    "from src.Mushroom_classifier import logger\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "import joblib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "fa360836",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ModelTrainer:\n",
+    "    def __init__(self, config: ModelTrainerConfig):\n",
+    "        self.config = config\n",
+    "\n",
+    "    \n",
+    "    def train(self):\n",
+    "        train_data = pd.read_csv(self.config.train_data_path)\n",
+    "        test_data = pd.read_csv(self.config.test_data_path)\n",
+    "\n",
+    "        train_x = train_data.drop([self.config.target_column], axis=1)\n",
+    "        test_x = test_data.drop([self.config.target_column], axis=1)\n",
+    "        train_y = train_data[[self.config.target_column]]\n",
+    "        test_y = test_data[[self.config.target_column]]\n",
+    "\n",
+    "        rf = RandomForestClassifier(n_estimators = self.config.n_estimators, min_samples_split = self.config.min_samples_split, random_state = 42)\n",
+    "        rf.fit(train_x, train_y.values.ravel())\n",
+    "\n",
+    "        joblib.dump(rf, os.path.join(self.config.root_dir, self.config.model_name))\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a941337f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
