update model trainer pipeline

--- a/research/04_model_trainer.ipynb
+++ b/research/04_model_trainer.ipynb
@@ -212,9 +212,46 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bbc4fe9a",
+   "metadata": {},
+   "source": [
+    "## Model Trainer Pipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "a941337f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2025-10-03 23:21:57,589: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2025-10-03 23:21:57,595: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2025-10-03 23:21:57,599: INFO: common: yaml file: schema.yaml loaded successfully]\n",
+      "[2025-10-03 23:21:57,600: INFO: common: created directory at: artifacts]\n",
+      "[2025-10-03 23:21:57,601: INFO: common: created directory at: artifacts/model_trainer]\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    config = ConfigurationManager()\n",
+    "    model_trainer_config = config.get_model_trainer_config()\n",
+    "    model_trainer_config = ModelTrainer(config = model_trainer_config)\n",
+    "    model_trainer_config.train()\n",
+    "\n",
+    "except Exception as e:\n",
+    "    raise e"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a941337f",
+   "id": "6c3c1c86",
    "metadata": {},
    "outputs": [],
    "source": []
